fixed nav text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,17 @@ nav.bg-light {
   background-color: var(--main-dark-color) !important;
 }
 
+@media screen and (max-device-width: 620px) {
+  .navbar-brand{
+    font-size: 0.5rem !important;
+  }
+}
+
+@media screen and (max-device-width: 620px) and (min-device-width: 320px) {
+  .navbar-brand{
+    font-size: 0.65em !important;
+  }
+}
 
 .shadow1 {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
